Converted all GPS coordinates to kilometers and SVG positions. Moved coordinate conversion to a separate class. Added demo mode and spoken directions. Replaced icons with open source variants. Moved full-screen code to separate class.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
-<input class="from" type="text" placeholder="Enter your start address" #start (keyup)="changeFrom(start.value, $event)" [value]="from">
-<input class="to" type="text" placeholder="Enter your destination address" #destination (keyup)="changeTo(destination.value, $event)" [value]="to">
+<div>
+    <input class="from" type="text" placeholder="Enter your start address" #start (keyup)="changeFrom(start.value, $event)" [value]="from">
+    <input class="to" type="text" placeholder="Enter your destination address" #destination (keyup)="changeTo(destination.value, $event)" [value]="to">
+</div>
