--- a/src/app/mainview/mainview.component.css
+++ b/src/app/mainview/mainview.component.css
@@ -1,14 +1,43 @@
-div.topicons {
+div.icons {
     margin: 0px;
     padding: 0px;
-    position: absolute;
+    position: relative;
+    height: 48px;
 }
 
 div.bottomicons {
     margin: 0px;
     padding: 0px;
-    top: calc(100% - 64px);
+    top: calc(100% - 32px);
     position: absolute;
+}
+
+div.credits {
+    background-color: #0000003F;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+div.credits div {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    bottom: 25%;
+    width: 50%;
+    background-color: white;
+    opacity: 1;
+}
+
+div.credits div div {
+    position: absolute;
+    text-align: center;
+    top: calc(50% - 12px);
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-family: Arial;
+    font-size: 24px;
 }
 
 svg {
@@ -18,7 +47,7 @@ svg {
     padding: 0px;
     position: absolute;
     display: block;
-    background-color: transparant;
+    background-color: burlywood;
 }
 
 @keyframes fade-in {
@@ -29,6 +58,11 @@ svg {
 @keyframes grow {
     0% { transform: scale(0); }
     100% { transform: scale(1); }
+}
+
+@keyframes size {
+    0% { r: 0; }
+    100% { r: 3; }
 }
 
 polyline {
@@ -53,30 +87,26 @@ circle {
     animation: grow 1s ease-out;
 }
 
-circle.radar {
-    fill: green;
-    animation: fade-in 1s ease-in;
-}
-
 circle.me {
     fill: yellow;
+    animation: size 1s ease-out;
 }
 
 circle.accuracy {
     fill: black;
     opacity: 0.1;
+    animation: none;
 }
 
 line.radar {
     stroke-linecap: round;
     stroke: red;
     stroke-width: 3px;
-    animation: fade-in 1s ease-in;
 }
 
-path {
+path.radar, circle.radar {
     fill: red;
-    animation: fade-in-delayed 3s ease-in;
+    animation: none;
 }
 
 text {
@@ -85,4 +115,10 @@ text {
     font-size: 5px;
     font-variant-caps: small-caps;
     animation: fade-in 1s ease-in;
+}
+
+img {
+    width: 32px;
+    height: 32px;
+    margin-right: 16px;
 }
