--- a/src/app/mainview/mainview.component.html
+++ b/src/app/mainview/mainview.component.html
@@ -8,18 +8,20 @@
                 </g>
             </g>
         </g>
-        <g *ngIf="null != radarInfos">
-            <g *ngFor="let radarInfo of radarInfos">
-                <g [attr.transform]="radarInfo.svgPosition">
-                    <circle class="radar" cx="50.041" cy="53.256" r="9.513"/>
-                    <path class="radar" d="M86.778,24.2v-0.037H70.111v-2.792c0-2.056-1.667-3.722
-                        -3.722-3.722H33.611c-2.056,0-3.723,1.666-3.723,3.722v2.792H13.221V24.2
-                        c-2.056,0-3.721,1.666-3.721,3.722v50.669c0,2.056,1.665,3.722,3.721,3.722
-                        v0.037h73.557v-0.037c2.055,0,3.722-1.667,3.722-3.722V27.922C90.5,25.866,
-                        88.833,24.2,86.778,24.2zM50.247,72.542c-10.651,0-19.286-8.634-19.286-19.286
-                        c0-10.651,8.635-19.286,19.286-19.286c10.652,0,19.287,8.635,19.287,19.286
-                        C69.535,63.908,60.899,72.542,50.247,72.542z M85.513,39.145H70.773v-9.957
-                        h14.739V39.145z"/>
+        <g *ngIf="null != routeAndTrafficCombo">
+            <g *ngIf="null != routeAndTrafficCombo.radarInfos">
+                <g *ngFor="let radarInfo of routeAndTrafficCombo.radarInfos">
+                    <g [attr.transform]="radarInfo.svgPosition">
+                        <circle class="radar" cx="50.041" cy="53.256" r="9.513"/>
+                        <path class="radar" d="M86.778,24.2v-0.037H70.111v-2.792c0-2.056-1.667-3.722
+                            -3.722-3.722H33.611c-2.056,0-3.723,1.666-3.723,3.722v2.792H13.221V24.2
+                            c-2.056,0-3.721,1.666-3.721,3.722v50.669c0,2.056,1.665,3.722,3.721,3.722
+                            v0.037h73.557v-0.037c2.055,0,3.722-1.667,3.722-3.722V27.922C90.5,25.866,
+                            88.833,24.2,86.778,24.2zM50.247,72.542c-10.651,0-19.286-8.634-19.286-19.286
+                            c0-10.651,8.635-19.286,19.286-19.286c10.652,0,19.287,8.635,19.287,19.286
+                            C69.535,63.908,60.899,72.542,50.247,72.542z M85.513,39.145H70.773v-9.957
+                            h14.739V39.145z"/>
+                    </g>
                 </g>
             </g>
         </g>
@@ -38,16 +40,18 @@
                 <text transform="scale(1,-1)" [attr.x]="city.svgX" [attr.y]="-city.svgY">{{city.tags.name}}</text>
             </g>
         </g>
-        <g *ngIf="null != radarInfos">
-            <g *ngFor="let radarInfo of radarInfos">
-                <line class="radar" [attr.x1]="radarInfo.svgFromLoc.x" [attr.y1]="radarInfo.svgFromLoc.y"
-                                    [attr.x2]="radarInfo.svgToLoc.x" [attr.y2]="radarInfo.svgToLoc.y" />
+        <g *ngIf="null != routeAndTrafficCombo">
+            <g *ngIf="null != routeAndTrafficCombo.radarInfos">
+                <g *ngFor="let radarInfo of routeAndTrafficCombo.radarInfos">
+                    <line class="radar" [attr.x1]="radarInfo.svgFromLoc.x" [attr.y1]="radarInfo.svgFromLoc.y"
+                                        [attr.x2]="radarInfo.svgToLoc.x" [attr.y2]="radarInfo.svgToLoc.y" />
+                </g>
             </g>
-        </g>
-        <g *ngIf="null != trafficInfos">
-            <g *ngFor="let trafficInfo of trafficInfos">
-                <title>{{trafficInfo.trafficjam.description}}</title>
-                <polyline class="traffic-info" [appPolyline]="trafficInfo.feature.svgGeometry.coordinates" first="{{trafficInfo.first}}" last="{{trafficInfo.last}}" />
+            <g *ngIf="null != routeAndTrafficCombo.trafficInfos">
+                <g *ngFor="let trafficInfo of routeAndTrafficCombo.trafficInfos">
+                    <title>{{trafficInfo.trafficjam.description}}</title>
+                    <polyline class="traffic-info" [appPolyline]="trafficInfo.feature.svgGeometry.coordinates" first="{{trafficInfo.first}}" last="{{trafficInfo.last}}" />
+                </g>
             </g>
         </g>
         <g *ngIf="null != myLocation">
