Refactoring of the code. Instructions now have a better way of finding the next instruction. The detailed information is now shown as an area of 4x4 km. Scale and width of the line segments are no longer dependent of the length of the route. Detailed instructions rotate at an angle depending on where the next instruction is due.

--- a/src/app/mainview/mainview.component.css
+++ b/src/app/mainview/mainview.component.css
@@ -79,11 +79,13 @@ svg.distance {
     width: 64px;
     height: 48px;
     position: absolute;
+    background-color: #DEB887C0;
 }
 
 svg.distance text {
     font-size: 80px;
-    fill: black;
+    fill: blue;
+    font-weight: bold;
     animation: none;
 }
 
@@ -91,6 +93,12 @@ polyline.detail {
     stroke: green;
     stroke-width: 0.05px;
     opacity: 0.25;
+}
+
+polyline.traffic-detail {
+    stroke: red;
+    stroke-width: 0.06px;
+    opacity: 0.75;
 }
 
 polyline.route-detail {
