--- a/src/app/mainview/mainview.component.html
+++ b/src/app/mainview/mainview.component.html
@@ -1,11 +1,9 @@
 <svg viewBox="-100 -100 200 200" width="100%" height="100%" preserveAspectRatio="xMidYMid meet">
     <!-- Setting the transform on the svg element is not supported by all browsers. -->
     <g transform="scale(1,-1)">
-        <g *ngIf="null != cities">
-            <g *ngFor="let city of cities">
-                <g *ngIf="null != city.tags.population">
-                    <circle [attr.cx]="city.svgX" [attr.cy]="city.svgY" [attr.r]="city.tags.population/10000" />
-                </g>
+        <g *ngFor="let city of cities">
+            <g *ngIf="null != city.population">
+                <circle [attr.cx]="city.svgLoc.x" [attr.cy]="city.svgLoc.y" [attr.r]="city.population/10000" />
             </g>
         </g>
         <g *ngIf="null != routeAndTrafficCombo">
@@ -25,32 +23,23 @@
                 </g>
             </g>
         </g>
-        <g *ngIf="null != route">
-            <g *ngFor="let feature of route.features">
-                <g *ngFor="let segment of feature.properties.segments">
-                    <g *ngFor="let step of segment.steps">
-                        <title>{{step.name}}</title>
-                        <polyline class="route" [appPolyline]="feature.svgGeometry.coordinates" first="{{step.way_points[0]}}" last="{{step.way_points[1]}}" />
-                    </g>
-                </g>
-            </g>
+        <g *ngIf="null != routeInfo">
+            <polyline class="route" [appPolyline]="routeInfo.svgCoordinates" />
         </g>
-        <g *ngIf="null != cities">
-            <g *ngFor="let city of cities">
-                <text transform="scale(1,-1)" [attr.x]="city.svgX" [attr.y]="-city.svgY">{{city.tags.name}}</text>
-            </g>
+        <g *ngFor="let city of cities">
+            <text transform="scale(1,-1)" [attr.x]="city.svgLoc.x" [attr.y]="-city.svgLoc.y">{{city.name}}</text>
         </g>
         <g *ngIf="null != routeAndTrafficCombo">
-            <g *ngIf="null != routeAndTrafficCombo.radarInfos">
-                <g *ngFor="let radarInfo of routeAndTrafficCombo.radarInfos">
-                    <line class="radar" [attr.x1]="radarInfo.svgFromLoc.x" [attr.y1]="radarInfo.svgFromLoc.y"
-                                        [attr.x2]="radarInfo.svgToLoc.x" [attr.y2]="radarInfo.svgToLoc.y" />
+            <g *ngIf="null != routeAndTrafficCombo.radarList">
+                <g *ngFor="let radar of routeAndTrafficCombo.radarList">
+                    <line class="radar" [attr.x1]="radar.svgFromLoc.x" [attr.y1]="radar.svgFromLoc.y"
+                                        [attr.x2]="radar.svgToLoc.x" [attr.y2]="radar.svgToLoc.y" />
                 </g>
             </g>
-            <g *ngIf="null != routeAndTrafficCombo.trafficInfos">
-                <g *ngFor="let trafficInfo of routeAndTrafficCombo.trafficInfos">
-                    <title>{{trafficInfo.trafficjam.description}}</title>
-                    <polyline class="traffic-info" [appPolyline]="trafficInfo.feature.svgGeometry.coordinates" first="{{trafficInfo.first}}" last="{{trafficInfo.last}}" />
+            <g *ngIf="null != routeAndTrafficCombo.trafficJamList">
+                <g *ngFor="let trafficJam of routeAndTrafficCombo.trafficJamList">
+                    <polyline class="traffic-info" [appPolyline]="routeAndTrafficCombo.route.svgCoordinates"
+                              first="{{trafficJam.first}}" last="{{trafficJam.last}}" />
                 </g>
             </g>
         </g>
@@ -60,19 +49,28 @@
         </g>
     </g>
 </svg>
-<svg class="details" *ngIf="detailsVisible" preserveAspectRatio="xMidYMid meet"
-     [attr.viewBox]="detailsViewbox" width="100%" height="100%">
-    <g transform="scale(1,-1)">
-        <g *ngFor="let road of routeDetailsRoads">
+
+<svg class="details" *ngIf="null != routeDetails" preserveAspectRatio="xMidYMid meet"
+     [attr.viewBox]="routeDetails.viewbox" width="100%" height="100%">
+    <g [attr.transform]="routeDetails.transform">
+        <g *ngFor="let road of routeDetails.roads">
             <polyline class="detail" [appPolyline]="road" />
         </g>
-        <polyline class="route-detail" [appPolyline]="routeDetailsRoute" />
-        <circle class="route-detail" [attr.cx]="myLocation.svgLoc.x"  [attr.cy]="myLocation.svgLoc.y" r="0.06"/>
-    </g>
+        <polyline class="route-detail" [appPolyline]="routeDetails.route" />
+        <circle class="route-detail" [attr.cx]="myLocation.kmLoc.x"  [attr.cy]="myLocation.kmLoc.y" r="0.06"/>
+        <g *ngIf="null != routeAndTrafficCombo.trafficJamList">
+            <g *ngFor="let trafficJam of routeAndTrafficCombo.trafficJamList">
+                <polyline class="traffic-detail" [appPolyline]="routeDetails.route"
+                          first="{{trafficJam.first}}" last="{{trafficJam.last}}" />
+            </g>
+        </g>
+</g>
 </svg>
+
 <svg *ngIf="(distance > 25) && (distance < 500)" class="distance" viewBox="0 0 100 100">
     <text x="50" y="85" text-anchor="middle">{{distance}}</text>
 </svg>
+
 <div class="top-left-icons">
     <a [routerLink]="['/home', from, to]">
         <img id="home" src="assets/home.svg">
