Updated README.md Removed an issue with the myLocation in the details map. There was no check against null when using it in the view. Added names to the route and traffic information. This can make combining them more accurate (if we would use them).

--- a/src/app/mainview/mainview.component.html
+++ b/src/app/mainview/mainview.component.html
@@ -57,7 +57,9 @@
             <polyline class="detail" [appPolyline]="road" />
         </g>
         <polyline class="route-detail" [appPolyline]="routeDetails.routeInfo.kmCoordinates" />
-        <circle class="route-detail" [attr.cx]="myLocation.kmLoc.x"  [attr.cy]="myLocation.kmLoc.y" r="0.06"/>
+        <g *ngIf="null != myLocation">
+            <circle class="route-detail" [attr.cx]="myLocation.kmLoc.x"  [attr.cy]="myLocation.kmLoc.y" r="0.06"/>
+        </g>
         <g *ngIf="null != routeAndTrafficCombo.trafficJamList">
             <g *ngFor="let trafficJam of routeAndTrafficCombo.trafficJamList">
                 <polyline class="traffic-detail" [appPolyline]="routeDetails.routeInfo.kmCoordinates"
