Start of huge refactoring. Adding ngrx Store to the project to be able to access the route and traffic information from several classes instead of storing this all in the MainView. Most new classes are small which is a good indication that we are heading the right direction.

--- a/src/app/mainview/mainview.component.html
+++ b/src/app/mainview/mainview.component.html
@@ -1,79 +1,5 @@
-<!-- TODO: Move all these elements to their own components:
-     RouteSummary, RouteDetails, Cities, TrafficJams, Radars -->
-<svg viewBox="-100 -100 200 200" width="100%" height="100%" preserveAspectRatio="xMidYMid meet">
-    <!-- Setting the transform on the svg element is not supported by all browsers. -->
-    <g transform="scale(1,-1)">
-        <g *ngFor="let city of cities">
-            <g *ngIf="null != city.population">
-                <circle [attr.cx]="city.svgLoc.x" [attr.cy]="city.svgLoc.y" [attr.r]="city.population/10000" />
-            </g>
-        </g>
-        <g *ngIf="null != routeAndTrafficCombo">
-            <g *ngIf="null != routeAndTrafficCombo.radarList">
-                <g *ngFor="let radarInfo of routeAndTrafficCombo.radarList">
-                    <g [attr.transform]="radarInfo.transform">
-                        <circle class="radar" cx="50.041" cy="53.256" r="9.513"/>
-                        <path class="radar" d="M86.778,24.2v-0.037H70.111v-2.792c0-2.056-1.667-3.722
-                            -3.722-3.722H33.611c-2.056,0-3.723,1.666-3.723,3.722v2.792H13.221V24.2
-                            c-2.056,0-3.721,1.666-3.721,3.722v50.669c0,2.056,1.665,3.722,3.721,3.722
-                            v0.037h73.557v-0.037c2.055,0,3.722-1.667,3.722-3.722V27.922C90.5,25.866,
-                            88.833,24.2,86.778,24.2zM50.247,72.542c-10.651,0-19.286-8.634-19.286-19.286
-                            c0-10.651,8.635-19.286,19.286-19.286c10.652,0,19.287,8.635,19.287,19.286
-                            C69.535,63.908,60.899,72.542,50.247,72.542z M85.513,39.145H70.773v-9.957
-                            h14.739V39.145z"/>
-                    </g>
-                </g>
-            </g>
-        </g>
-        <g *ngIf="null != routeInfo">
-            <polyline class="route" [appPolyline]="routeInfo.svgCoordinates" />
-        </g>
-        <g *ngFor="let city of cities">
-            <text transform="scale(1,-1)" [attr.x]="city.svgLoc.x" [attr.y]="-city.svgLoc.y">{{city.name}}</text>
-        </g>
-        <g *ngIf="null != routeAndTrafficCombo">
-            <g *ngIf="null != routeAndTrafficCombo.radarList">
-                <g *ngFor="let radar of routeAndTrafficCombo.radarList">
-                    <line class="radar" [attr.x1]="radar.svgFromLoc.x" [attr.y1]="radar.svgFromLoc.y"
-                                        [attr.x2]="radar.svgToLoc.x" [attr.y2]="radar.svgToLoc.y" />
-                </g>
-            </g>
-            <g *ngIf="null != routeAndTrafficCombo.trafficJamList">
-                <g *ngFor="let trafficJam of routeAndTrafficCombo.trafficJamList">
-                    <polyline class="traffic-info" [appPolyline]="routeAndTrafficCombo.route.svgCoordinates"
-                              first="{{trafficJam.first}}" last="{{trafficJam.last}}" />
-                </g>
-            </g>
-        </g>
-        <g *ngIf="null != myLocation">
-            <circle class="me" [attr.cx]="myLocation.svgLoc.x" [attr.cy]="myLocation.svgLoc.y" [attr.r]="3" />
-            <circle class="accuracy" [attr.cx]="myLocation.svgLoc.x" [attr.cy]="myLocation.svgLoc.y" [attr.r]="myLocation.accuracy" />
-        </g>
-    </g>
-</svg>
-
-<svg class="details" *ngIf="null != routeDetails" preserveAspectRatio="xMidYMid meet"
-     [attr.viewBox]="routeDetails.viewbox" width="100%" height="100%">
-    <g [attr.transform]="routeDetails.transform">
-        <g *ngFor="let road of routeDetails.roads">
-            <polyline class="detail" [appPolyline]="road" />
-        </g>
-        <polyline class="route-detail" [appPolyline]="routeDetails.routeInfo.kmCoordinates" />
-        <g *ngIf="null != myLocation">
-            <circle class="route-detail" [attr.cx]="myLocation.kmLoc.x"  [attr.cy]="myLocation.kmLoc.y" r="0.06"/>
-        </g>
-        <g *ngIf="null != routeAndTrafficCombo.trafficJamList">
-            <g *ngFor="let trafficJam of routeAndTrafficCombo.trafficJamList">
-                <polyline class="traffic-detail" [appPolyline]="routeDetails.routeInfo.kmCoordinates"
-                          first="{{trafficJam.first}}" last="{{trafficJam.last}}" />
-            </g>
-        </g>
-    </g>
-</svg>
-
-<svg *ngIf="(distance > 10) && (distance < 500)" class="distance" viewBox="0 0 100 100">
-    <text x="50" y="85" text-anchor="middle">{{distance}}</text>
-</svg>
+<app-route-summary></app-route-summary>
+<app-route-details></app-route-details>
 
 <div class="top-left-icons">
     <a [routerLink]="['/home', from, to]">
